@@ -1,2 +1,2 @@
 VERSION=1.1.0
-RELEASE=1
+RELEASE=2
