@@ -21,8 +21,8 @@ SCRIPTPATH=`dirname $SCRIPT`
 BUILD_DIR=$SCRIPTPATH/../../build  #script is in /test/unit
 
 ccheck_path=`locate libcheck.so.0 | head -1 | sed 's/libcheck.so.0//'`
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$1:$ccheck_path
-echo $LD_LIBRARY_PATH
+cgsi_path=`locate libcgsi_plugin_gsoap_2.7.so.1 | head -1 | sed 's/libcgsi_plugin_gsoap_2.7.so.1//'`
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ccheck_path:$cgsi_path
 
 pushd $BUILD_DIR/src &> /dev/null
 ./gfal_srm_ifce_unittest
